Fix hidden search results visibility

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -76,6 +76,10 @@ a {
   text-decoration: none;
 }
 
+[hidden] {
+  display: none !important;
+}
+
 p {
   line-height: 1.8;
 }
